themes/supersimple/assets/styles/footer.scss
footer {
    padding-top: 7rem;

    .footer-image {
        width: 100%;
        justify-content: center;
        display: flex;

        overflow: hidden;

        svg {
            min-height: 3.5rem;
            flex-shrink: 0;
            margin: auto;
            height: 100%;
            shape-rendering: geometricPrecision;
        }
    }

    .footer-content {
        display: flex;
        flex-direction: row;
        column-gap: 3rem;
        row-gap: 1rem;
        // justify-content: space-between;

        margin: 4rem auto 0 auto;
        width: 100%;
        // max-width: 1100px;

        line-height: 1.5;

        color: $c4;

        .footer-col {
            width: min-content;

            .footer-label {
                @include header-font;
                font-size: 1.5rem;
                white-space: nowrap;
                margin-bottom: 0.75em;
            }

            ul {
                list-style: none;
                padding: 0;
                margin-top: -0.5em;

                li {
                    line-height: 1.6;
                    font-size: 1rem;
                }
            }

            &.col-1 {
                flex-basis: 40%;
                line-height: 1.25;

                .footer-spacer {
                    height: 1.05em;
                }
            }

            &.col-4 {
                flex-grow: 1;
                text-align: right;
                .footer-year {
                    margin-top: 5.25em;
                    padding-right: 0.5em;
                }

                .back-to-top {
                    .footer-arrow {
                        display: inline-block;
                        transition: transform 0.15s ease-in-out;
                        transform: translateY(0.15em);
                    }

                    svg {
                        fill: $c4 !important;
                        stroke: $c4 !important;
                    }

                    &:hover {
                        .footer-arrow {
                            transform: translateY(-0.02em);
                        }

                        svg {
                            fill: $p7 !important;
                            stroke: $p7 !important;
                        }
                    }
                }
            }
        }
    }

    @media screen and (max-width: 800px) {
        footer {
            padding-top: 1rem;
        }

        .footer-content {
            margin-top: 1em;
            flex-wrap: wrap;
            justify-content: left;

            .footer-col {
                margin-bottom: 1rem;

                &.col-1 {
                    flex-basis: 100%;
                }

                &.col-4 {
                    flex-basis: 100%;

                    a {
                        display: none;
                    }
                }

                .footer-year {
                    margin-top: 0;
                }
            }
        }
    }
}

